--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>demo</title>
+	<title>旋转图片Demo</title>
 </head>
 <body>
 	<p>
