在基础tips提示后，增加alert弹框

--- a/dialog/index.html
+++ b/dialog/index.html
@@ -12,6 +12,7 @@
 		<a id="js_btn_tips_warning" class="btn_dialog" href="javascript:void(0);">警告提示</a>
 		<a id="js_btn_tips_error" class="btn_dialog" href="javascript:void(0);">错误提示</a>
 		<a id="js_btn_tips_loading" class="btn_dialog" href="javascript:void(0);">加载提示</a>
+		<a id="js_btn_dialog_alert" class="btn_dialog" href="javascript:void(0);">警告弹框</a>
 	</div>
 	<script type="text/javascript">
 		require.config({
